<resources>
    <string name="app_name">Music.IO</string>
    <string name="facebook_app_id">242918692846456</string>
    <string name="title_activity_media_iomain">MediaIOMain</string>
    <string name="datos">com.example.mediaio.mediaio</string>
    <string name="textoLoginEmail">Ingrese su email para comenzar</string>
    <string name="botonEnviarEmailLogin">></string>

    <string name="registroTextoRegistro">¡Contanos sobre vos! De esta forma pasaras a formar parte de Music.IO y generaremos tu experiencia perfecta.</string>
    <string name="registroTextoNombreUsuario">Nombre de usuario:</string>
    <string name="registroTextoNombre">Nombre:</string>
    <string name="registroTextoApellido">Apellido:</string>
    <string name="registroTextoEmail">Email</string>
    <string name="registroTextoFechaNacimiento">Fecha de Nacimiento:</string>
    <string name="registroTextoPais">Pais:</string>
    <string name="registroTextoContrasena">Contraseña:</string>
    <string name="registroTextoBotonRegistrar">Registrarse</string>
    <string name="botonLogin">Ingresar</string>
    <string name="textoLoginContrasena">Ingrese su contraseña para finalizar el login.</string>
    <string name="loginContrasenaInvalida">Contraseña invalida. Intente nuevamente.</string>
    <string name="botonLogout">Logout</string>

    <string name="menuLogout">Logout</string>
    <string name="menuPerfil">Perfil</string>
    <string name="menuIcono">Music.IO</string>
    <string name="menuAmigos">Amigos</string>
    <string name="menuPlaylist">Playlist</string>
    <string name="menuChat">Chat</string>


    <string name="perfilTextoBotonGuardarCambios">Actualizar Perfil</string>
    <string name="perfilTextoModificacion">Datos de tu perfil</string>

    <string name="TituloListaCanciones">Canciones</string>
    <string name="TituloListaAlbumes">Albumes</string>
    <string name="TituloListaUsuarios">Usuarios</string>
    <string name="BotonBuscar">Buscar</string>
    <string name="TituloListaPlaylist">Playlists</string>
    <string name="TituloListaArtistas">Artistas</string>

    <string name="NuevaPlaylistDialogoTitulo">Crear nueva playlist</string>
    <string name="NuevaPlaylistDialogoMensaje">¿Que nombre quieres ponerle?</string>
    <string name="NuevaPlaylistDialogoIngresarNombre">Nombre:</string>
    <string name="NuevaPlaylistDialogoIngresarDescripcion">Descripcion:</string>
    <string name="NuevaPlaylistDialogoBotonCrear">Crear</string>
    <string name="NuevaPlaylistDialogoBotonCancelar">Cancelar</string>
    <string name="menuPlaylistEliminarPlaylist">Eliminar</string>
    <string name="PlayListEliminarTitulo">Eliminacion de playlist</string>
    <string name="PlayListEliminarMensaje">Se borrara la playlist ¿Desea continuar?</string>
    <string name="PlaylistEliminarContinuar">Continuar</string>
    <string name="playlistEliminarCancelar">No, no quiero borrarla</string>
    <string name="menuCancionEliminarCancionPlaylist">Eliminar de la playlist</string>
    <string name="menuCancionAgregarCancionPlaylist">Agregar a playlist</string>
    <string name="CancionAgregarAPlaylist">Playlist</string>
    <string name="CancionAgregarAPlaylistMensaje">Seleccion la playlist destino</string>
    <string name="CancionCancelarAgregarAPlaylist">Cancelar</string>
    <string name="TituloListaContactos">Contactos</string>
    <string name="BotonSeguirUsuario">Seguir</string>
    <string name="DejarSeguir">Dejar de seguir</string>
    <string name="SeguirUsuario">Seguir</string>
    <string name="TituloListaContactosUsuario">Tus contactos</string>
    <string name="menuContactoDejarDeSeguirt">Dejar de seguir</string>
</resources>
