<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ventana"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:text="@string/registroTextoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.example.mediaio.mediaio.Formularios.EditTextComun
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registroTextoNombre"
        custom:requerido="true"/>

    <TextView
        android:text="@string/registroTextoApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.example.mediaio.mediaio.Formularios.EditTextComun
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registroTextoApellido"
        custom:requerido="true"/>

    <TextView
        android:text="@string/registroTextoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.example.mediaio.mediaio.Formularios.EditTextEmail
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registroTextoEmail"
        custom:requerido="true"/>

    <TextView
        android:text="@string/registroTextoFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.example.mediaio.mediaio.Formularios.EditTextFecha
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registroTextoFechaNacimiento"/>

    <TextView
        android:text="@string/registroTextoContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <com.example.mediaio.mediaio.Formularios.EditTextPassword
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registroTextoContrasena" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registroTextoBotonRegistrar"
        android:id="@+id/registroBotonRegistrar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registroTextoError"
        />




</LinearLayout>