<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/BarraMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ventana"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">


            <TextView
                android:text="@string/perfilTextoModificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:textColor="@color/colorTextoRegistro"
                />

            <ImageView
                android:layout_width="160px"
                android:layout_height="160px"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:id="@+id/avatar"/>

            <TextView
                android:text="@string/registroTextoNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextComun
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoNombreUsuario"
                custom:requerido="true"/>

            <TextView
                android:text="@string/registroTextoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextComun
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoNombre"
                custom:requerido="true"/>

            <TextView
                android:text="@string/registroTextoApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextComun
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoApellido"
                custom:requerido="true"/>

            <TextView
                android:text="@string/registroTextoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextEmail
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoEmail"
                custom:requerido="true"/>

            <TextView
                android:text="@string/registroTextoFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextFecha
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoFechaNacimiento"/>

            <TextView
                android:text="@string/registroTextoPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextComun
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoPais"/>

            <TextView
                android:text="@string/registroTextoContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.example.mediaio.mediaio.Formularios.EditTextPassword
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoContrasena" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/perfilTextoBotonGuardarCambios"
                android:id="@+id/perfilBotonGuardarCambios"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/perfilTextoError"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>